compactor.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: thanos-compactor
  namespace: ops
  labels:
    app: thanos-compactor
spec:
  selector:
    matchLabels:
      app: thanos-compactor
  serviceName: thanos-compactor
  template:
    metadata:
      labels:
        app: thanos-compactor
    spec:
      containers:
        - name: thanos 
          image: quay.io/thanos/thanos:v0.12.2
          args:
            - compactor
            - --log.level=debug
            - --data-dir=/data
            - --objstore.config-file=/etc/secret/thanos.yaml
            - --wait
          ports:
            - name: http
              containerPort: 10902
            - name: grpc
              containerPort: 10901
          livenessProbe:
            httpGet:
              port: 10902
              path: /-/healthy
          readinessProbe:
            httpGet:
              port: 10902
              path: /-/ready
          volumeMounts:
            - name: object-storage-config
              mountPath: /etc/secret
      volumes:
        - name: object-storage-config
          secret:
            secretName: thanos-objectstorage
