store.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: thanos-store-gateway
  namespace: ops
  labels:
    app: thanos-store-gateway
spec:
  selector:
    matchLables:
      app: thanos-store-gateway
  serviceName: thanos-store-gateway
  template:
    metadata:
      labels:
        app: thanos-store-gateway
        thanos-store-api: "true"
    spec:
      containers:
        - name: thanos 
          image: quay.io/thanos/thanos:v0.12.2
          args:
            - store
            - --log.level=debug
            - --data-dir=/data
            - --objstore.config-file=/etc/secret/thanos.yaml
            - --index-cache-size=500MB
            - --chunk-pool-size=500MB
          ports:
            - name: http
              containerPort: 10902
            - name: grpc
              containerPort: 10901
          livenessProbe:
            httpGet:
              port: 10902
              path: /-/healthy
          readinessProbe:
            httpGet:
              port: 10902
              path: /-/ready
          volumeMounts:
            - name: object-storage-config
              mountPath: /etc/secret
      volumes:
        - name: object-storage-config
          secret:
            secretName: thanos-objectstorage
