headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: thanos-store-gateway
  namespace: ops
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    thanos-store-api: "true"
  ports:
  - name: grpc
    port: 10901
    targetPort: 10901
