thanos-prom-ing.yaml
apiVersion: v1
kind: Service
metadata:
  name: monitor-prometheus-operato-thanos
spec:
  ports:
  - name: web
    port: 10902
    protocol: TCP
    targetPort: 10902
  selector:
    app: prometheus
    prometheus: monitor-prometheus-operato-prometheus
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: thanos-prom
  namespace: prometheus
spec:
  rules:
  - host: thanos-prom.mapsic.cn
    http:
      paths:
      - backend:
          serviceName: monitor-prometheus-operato-thanos
          servicePort: 10902
        path: /
  tls:
  - hosts:
    - thanos-prom.mapsic.cn
    secretName: monitor-general-tls
